Update template "n52_wieu_theme": fix popover line spacing

--- a/sites/all/themes/n52_wieu_theme/css/global-styles.css
+++ b/sites/all/themes/n52_wieu_theme/css/global-styles.css
@@ -238,6 +238,7 @@ ul.related-link-list li {
 .node-teaser div.popover-content {
 	font-size: 50%;
 	width: 100%;
+	line-height: initial;
 }
 
 .page-title div.popover,
